# tictactoe

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_tictactoe.py
tictactoe/: tictactoe.py
