[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = ["Adriano Pagano <adriano.pagano1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.6.3"
pytest = "^7.2.1"
black = "^23.1.0"
click = "^8.1.3"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
